# tauri-plugin-admob

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.jsonc  build.rs  bun.lockb  devshell.nix  flake.nix  package.json  rolldown.config.js  rollup.config.js
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml  pr.yml
android/: build.gradle.kts
android/src/androidTest/java/: AdmobImplInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: AdmobImpl.kt  AdmobPlugin.kt  ExecuteContext.kt  Generated.kt
android/src/test/java/: AdmobImplUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
dist-js/ads/: banner.d.ts  common.d.ts  interstitial.d.ts  rewarded.d.ts
examples/tauri-app/: bun.lockb  package.json  vite.config.js
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Greet.svelte
guest-js/: index.ts
guest-js/ads/: banner.ts  common.ts  interstitial.ts  rewarded.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: adCreate.toml  adHide.toml  adIsLoaded.toml  adLoad.toml  adShow.toml  configRequest.toml  configure.toml  isPrivacyOptionsRequired.toml  requestTrackingAuthorization.toml  showPrivacyOptionsForm.toml  trackingAuthorizationStatus.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
(+9 files in other folders)
