 [package]
name = "tauri-plugin-admob"
version = "0.0.4"
authors = [ "You" ]
description = "Tauri Plugin admob"
license = "MIT"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-admob"

[dependencies]
tauri = { version = "2.4.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }
